<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vikramj.tempcalc.MainActivity" >



    <RadioGroup
        android:id="@+id/radioGroupTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/convert_btn"
        android:layout_alignEnd="@+id/convert_btn">


        <RadioButton
            android:id="@+id/radioFarenheight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radio_far"
            android:checked="false"

            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:id="@+id/radioCelcius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radio_cel"
            android:layout_below="@+id/radioFarenheight"
            android:layout_alignLeft="@+id/radioFarenheight"
            android:layout_alignStart="@+id/radioFarenheight" />

        <RadioButton
            android:id="@+id/radioKelvin"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:checked="true"
            android:text="@string/text_radio_kel"
            android:layout_below="@+id/radioCelcius"
            android:layout_alignLeft="@+id/radioCelcius"
            android:layout_alignStart="@+id/radioCelcius" />


    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_sel_temp"
        android:id="@+id/textView"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/convert_btn"
        android:layout_centerHorizontal="true" />


    <!--android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/radioGroupTemp"
        android:layout_alignEnd="@+id/radioGroupTemp"-->











    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/tempratureInput"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_temp_in"
        android:id="@+id/textView3"
        android:layout_below="@+id/radioKelvin"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_btn_calc"
        android:id="@+id/convert_btn"
        android:layout_below="@+id/tempratureInput"
        android:layout_centerHorizontal="true" />




</RelativeLayout>
